# bayesopt-fluorescence

./: .gitignore  CLI_GUIDE.md  README.md  WORKSHOP_README.md  audit_report.md  config.py  demo_workflow.py  environment.yml  generate_initial_design.py  pyproject.toml  requirements.txt  run_optimization.py  setup.bat  setup.sh  train_models.py  workshop_notebook.ipynb
.serena/: project.yml
.virtual_documents/: workshop_notebook.ipynb
acquisition/: __init__.py  qnehvi.py  utils.py
constraints/: __init__.py  urea_dilution.py
data/: __init__.py  preprocessing.py  transformation.py
models/: __init__.py  gp_fitting.py  gp_model.py  gp_validation.py
workshop/: CLI_GUIDE.md  README.md  demo_workflow.py  setup.bat  setup.sh  workshop_notebook.ipynb
