[project]
name = "bayesopt-fluorescence"
version = "1.0.0"
description = "Multi-objective Bayesian optimization for fluorescence-guided protein refolding"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "gpytorch>=1.11",
    "botorch>=0.9",
    "numpy>=1.21",
    "pandas>=1.3",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "matplotlib>=3.4",
    "seaborn>=0.11",
    "openpyxl>=3.0",
    "jupyter>=1.0",
    "ipykernel>=6.0",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cpu" }]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

# For CUDA 12.6 support, replace the [tool.uv.sources] and index above with:
#
#   [tool.uv.sources]
#   torch = [{ index = "pytorch-cu126" }]
#
#   [[tool.uv.index]]
#   name = "pytorch-cu126"
#   url = "https://download.pytorch.org/whl/cu126"
#   explicit = true
